--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/sass/main.scss" />
-    
+
     <title>WebDev Roadmap</title>
   </head>
   <body>
@@ -25,19 +25,18 @@
     <main class="about">
       <h1 class="about__title">Our Goal:</h1>
       <p class="about__desc">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora eos
-        aut ipsam consequatur eligendi voluptates totam, excepturi nostrum illum
-        unde repellendus laborum iure quam. Unde ratione, optio tempore ea
-        deserunt voluptatum minus. Necessitatibus exercitationem reiciendis
-        aliquam esse iusto nihil nostrum numquam explicabo voluptatem
-        consectetur eveniet, atque, qui officiis velit similique enim, dicta
-        tempore deleniti itaque libero optio eos quis. Impedit odio animi odit
-        quibusdam nihil esse itaque, laudantium deserunt, cum facilis, alias
-        harum voluptatibus in asperiores laboriosam assumenda molestiae debitis
-        rem fuga ea facere ex ut excepturi! Dolores assumenda voluptate
-        blanditiis aspernatur animi. Cumque doloremque consectetur voluptatem
-        fugiat dolor voluptates fuga iste pariatur nobis, placeat repellendus
-        ipsam voluptatibus.
+        The purpose of this website is to give you a self-taught developer path
+        (curriculum). Sort of like you're own personal bootcamp but on your own
+        pace. The end goal is to make you a Self-taught developer. One of the
+        most challenging parts when starting out is where to begin. A sea of
+        information on where, what, how, why and everything else in between. As
+        a beginner, alone, you'll drown. That's why I have created this Roadmap.
+        It gives you a curriculum you can follow based on your timeline. All the
+        courses provided for you to follow either come from youtube (free) or
+        udemy ($15; they go on sale every 2 weeks). I'm not an instructor, but
+        the courses I recommend are courses I've completed myself. The
+        instructors are all great instructors and are well known in the
+        developer community. So get started with you're own personal roadmap.
       </p>
     </main>
   </body>
