Added accessibility to the website's pages. Keyboard accessibility fully completed

--- a/webdev.html
+++ b/webdev.html
@@ -33,15 +33,15 @@
       <div class="webdev__box">
         <h1 class="webdev__box-title">How</h1>
         <div class="process">
-          <p id="ideaPhase" class="process__circle">Idea Analysis</p>
+          <button id="ideaPhase" class="process__circle">Idea Analysis</button>
           <span class="arrow"> &rarr;</span>
-          <p id="designPhase" class="process__circle">Design</p>
+          <button id="designPhase" class="process__circle">Design</button>
           <span class="arrow"> &rarr;</span>
-          <p id="codePhase" class="process__circle">Code</p>
+          <button id="codePhase" class="process__circle">Code</button>
           <span class="arrow"> &rarr;</span>
-          <p id="launchPhase" class="process__circle">Test & Launch</p>
+          <button id="launchPhase" class="process__circle">Test & Launch</button>
           <span class="arrow"> &rarr;</span>
-          <p id="maintainPhase" class="process__circle">Maintain</p>
+          <button id="maintainPhase" class="process__circle">Maintain</button>
         </div>
         <div class="process__answer">
           <img
