Created createRoadMap function to seperate concerns and added more efficiency to model.js

--- a/roadmap.html
+++ b/roadmap.html
@@ -31,7 +31,7 @@
         <div class="roadmap__path">
           <p class="forPath">Path:</p>
           <div class="roadmap__path-info">
-            <p> 
+            <p>
               The shorter your timeline the more expensive, because you should
               be willing to spend on courses instead of spending hours and hours
               digging for videos.
@@ -42,7 +42,9 @@
               <option value="fullStack">Full Stack</option>
             </select>
 
-            <p class="path__help">Not Sure or Don't Know? Click Here</p>
+            <a href="#" class="path__help"
+              >Not Sure or Don't Know? Click Here</a
+            >
           </div>
         </div>
         <div class="paths">
