--- a/index.html
+++ b/index.html
@@ -12,12 +12,22 @@
         ><img src="src/img/webdevLogoWhite.png" alt="Webdev Logo"
       /></a>
       <ul class="nav__list">
-        <li class="nav__list-item"><a href="about.html">About</a></li>
         <li class="nav__list-item">
-          <a href="webdev.html">What is Web Development</a>
+          <a aria-label="Learn more abound this website" href="about.html"
+            >About</a
+          >
         </li>
         <li class="nav__list-item">
-          <a href="roadmap.html">Create Roadmap</a>
+          <a aria-label="What is web development?" href="webdev.html"
+            >What is Web Development</a
+          >
+        </li>
+        <li class="nav__list-item">
+          <a
+            aria-label="Create Roadmap for my self-taught web developer Path"
+            href="roadmap.html"
+            >Create Roadmap</a
+          >
         </li>
       </ul>
     </nav>
@@ -30,7 +40,12 @@
       <p class="home__path">
         Pick your: <span class="home__path-1">Path</span>&<span>Pace</span>
       </p>
-      <a class="btn" href="roadmap.html">My Roadmap</a>
+      <a
+        class="btn"
+        aria-label="Create Roadmap for my self-taught web developer Path"
+        href="roadmap.html"
+        >My Roadmap</a
+      >
     </main>
     <canvas class="canvas"></canvas>
     <script src="./src/js/controller.js"></script>
