Webdev page ARIA completed

--- a/about.html
+++ b/about.html
@@ -13,16 +13,20 @@
         ><img src="src/img/webdevLogoWhite.png" alt="Webdev Logo"
       /></a>
       <ul class="nav__list">
-        <li class="nav__list-item"><a href="about.html">About</a></li>
         <li class="nav__list-item">
-          <a href="webdev.html">What is Web Development</a>
+          <a aria-label="Learn more about this website" href="about.html"
+            >About</a
+          >
         </li>
         <li class="nav__list-item">
-          <a href="roadmap.html">Create Roadmap</a>
+          <a aria-label="What is web development?" href="webdev.html">What is Web Development</a>
+        </li>
+        <li class="nav__list-item">
+          <a aria-label="Create Roadmap for my self-taught web developer Path" href="roadmap.html">Create Roadmap</a>
         </li>
       </ul>
     </nav>
-    <main class="about">
+    <main role="main" class="about">
       <h1 class="about__title">Our Goal:</h1>
       <p class="about__desc">
         The purpose of this website is to give you a self-taught developer path
