--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>WebDev Roadmap</title>
   </head>
   <body>
-    <nav class="nav">
-      <a href="index.html"
+    <nav role="navigation" class="nav">
+      <a href="index.html" aria-label="Home Page" role="link"
         ><img src="src/img/webdevLogoWhite.png" alt="Webdev Logo"
       /></a>
       <ul class="nav__list">
         <li class="nav__list-item">
-          <a aria-label="Learn more abound this website" href="about.html"
+          <a aria-label="Learn more about this website" href="about.html"
             >About</a
           >
         </li>
@@ -31,7 +31,7 @@
         </li>
       </ul>
     </nav>
-    <main class="home">
+    <main role="main" class="home">
       <p class="home__msg">
         Welcome To WebDev Roadmap. Simple guide for people to generate their own
         <span class="home__highlight">Roadmap</span> to be becoming a
